removed Katalog button from main menu